Fixed margin percentages not showing in Firefox and Edge

--- a/themes/evr/sass/_process.scss
+++ b/themes/evr/sass/_process.scss
@@ -105,6 +105,7 @@
       width: 45%;
       padding: 2rem;
       height: auto;
+      margin: 1%;
       h3 {
         text-align: center;
         font-size: 1.3rem;
@@ -119,20 +120,18 @@
       }
     }
     li:first-child {
-      margin-right: 5%;
-      margin-bottom: 5%;
+      margin-right: 4%;
+      margin-bottom: 4rem;
     }
     li:nth-child(2) {
-      margin-left: 5%;
-      margin-bottom: 5%;
+      margin-left: 4%;
+      margin-bottom: 4rem;
     }
     li:nth-child(3) {
-      margin-right: 5%;
-      margin-top: 5%;
+      margin-right: 4%;
     }
     li:nth-child(4) {
-      margin-left: 5%;
-      margin-top: 5%;
+      margin-left: 4%;
     }
   }
 }
