--- a/themes/evr/style.css
+++ b/themes/evr/style.css
@@ -1625,7 +1625,8 @@ object {
       border-radius: 5px;
       width: 45%;
       padding: 2rem;
-      height: auto; }
+      height: auto;
+      margin: 1%; }
       .process-text ul li h3 {
         text-align: center;
         font-size: 1.3rem; }
@@ -1636,17 +1637,15 @@ object {
       .process-text ul li .more-details {
         display: none; }
     .process-text ul li:first-child {
-      margin-right: 5%;
-      margin-bottom: 5%; }
+      margin-right: 4%;
+      margin-bottom: 4rem; }
     .process-text ul li:nth-child(2) {
-      margin-left: 5%;
-      margin-bottom: 5%; }
+      margin-left: 4%;
+      margin-bottom: 4rem; }
     .process-text ul li:nth-child(3) {
-      margin-right: 5%;
-      margin-top: 5%; }
+      margin-right: 4%; }
     .process-text ul li:nth-child(4) {
-      margin-left: 5%;
-      margin-top: 5%; } }
+      margin-left: 4%; } }
 
 .process-information {
   padding: 2rem 2rem 1rem;
